--- a/changelog.txt
+++ b/changelog.txt
@@ -3,3 +3,4 @@ AWS-history: Update changelog 2023-09-10
 AWS-history: Update changelog 2023-09-11
 AWS-history: Update changelog 2023-09-12
 AWS-history: Update changelog 2023-09-13
+AWS-history: Update changelog 2023-09-14
