--- a/changelog.txt
+++ b/changelog.txt
@@ -5,3 +5,4 @@ AWS-history: Update changelog 2023-09-12
 AWS-history: Update changelog 2023-09-13
 AWS-history: Update changelog 2023-09-14
 AWS-history: Update changelog 2023-09-15
+AWS-history: Update changelog 2023-09-16
