--- a/changelog.txt
+++ b/changelog.txt
@@ -6,3 +6,4 @@ AWS-history: Update changelog 2023-09-13
 AWS-history: Update changelog 2023-09-14
 AWS-history: Update changelog 2023-09-15
 AWS-history: Update changelog 2023-09-16
+AWS-history: Update changelog 2023-09-17
