--- a/changelog.txt
+++ b/changelog.txt
@@ -7,3 +7,4 @@ AWS-history: Update changelog 2023-09-14
 AWS-history: Update changelog 2023-09-15
 AWS-history: Update changelog 2023-09-16
 AWS-history: Update changelog 2023-09-17
+AWS-history: Update changelog 2023-09-18
