--- a/changelog.txt
+++ b/changelog.txt
@@ -8,3 +8,4 @@ AWS-history: Update changelog 2023-09-15
 AWS-history: Update changelog 2023-09-16
 AWS-history: Update changelog 2023-09-17
 AWS-history: Update changelog 2023-09-18
+AWS-history: Update changelog 2023-09-19
