--- a/changelog.txt
+++ b/changelog.txt
@@ -9,3 +9,4 @@ AWS-history: Update changelog 2023-09-16
 AWS-history: Update changelog 2023-09-17
 AWS-history: Update changelog 2023-09-18
 AWS-history: Update changelog 2023-09-19
+AWS-history: Update changelog 2023-09-20
