--- a/changelog.txt
+++ b/changelog.txt
@@ -10,3 +10,4 @@ AWS-history: Update changelog 2023-09-17
 AWS-history: Update changelog 2023-09-18
 AWS-history: Update changelog 2023-09-19
 AWS-history: Update changelog 2023-09-20
+AWS-history: Update changelog 2023-09-21
