--- a/changelog.txt
+++ b/changelog.txt
@@ -11,3 +11,4 @@ AWS-history: Update changelog 2023-09-18
 AWS-history: Update changelog 2023-09-19
 AWS-history: Update changelog 2023-09-20
 AWS-history: Update changelog 2023-09-21
+AWS-history: Update changelog 2023-09-22
