--- a/changelog.txt
+++ b/changelog.txt
@@ -12,3 +12,4 @@ AWS-history: Update changelog 2023-09-19
 AWS-history: Update changelog 2023-09-20
 AWS-history: Update changelog 2023-09-21
 AWS-history: Update changelog 2023-09-22
+AWS-history: Update changelog 2023-09-23
