--- a/changelog.txt
+++ b/changelog.txt
@@ -13,3 +13,4 @@ AWS-history: Update changelog 2023-09-20
 AWS-history: Update changelog 2023-09-21
 AWS-history: Update changelog 2023-09-22
 AWS-history: Update changelog 2023-09-23
+AWS-history: Update changelog 2023-09-24
