--- a/changelog.txt
+++ b/changelog.txt
@@ -14,3 +14,4 @@ AWS-history: Update changelog 2023-09-21
 AWS-history: Update changelog 2023-09-22
 AWS-history: Update changelog 2023-09-23
 AWS-history: Update changelog 2023-09-24
+AWS-history: Update changelog 2023-09-25
