--- a/changelog.txt
+++ b/changelog.txt
@@ -15,3 +15,4 @@ AWS-history: Update changelog 2023-09-22
 AWS-history: Update changelog 2023-09-23
 AWS-history: Update changelog 2023-09-24
 AWS-history: Update changelog 2023-09-25
+AWS-history: Update changelog 2023-09-26
