--- a/changelog.txt
+++ b/changelog.txt
@@ -16,3 +16,4 @@ AWS-history: Update changelog 2023-09-23
 AWS-history: Update changelog 2023-09-24
 AWS-history: Update changelog 2023-09-25
 AWS-history: Update changelog 2023-09-26
+AWS-history: Update changelog 2023-09-27
