--- a/changelog.txt
+++ b/changelog.txt
@@ -17,3 +17,4 @@ AWS-history: Update changelog 2023-09-24
 AWS-history: Update changelog 2023-09-25
 AWS-history: Update changelog 2023-09-26
 AWS-history: Update changelog 2023-09-27
+AWS-history: Update changelog 2023-09-28
