--- a/changelog.txt
+++ b/changelog.txt
@@ -18,3 +18,4 @@ AWS-history: Update changelog 2023-09-25
 AWS-history: Update changelog 2023-09-26
 AWS-history: Update changelog 2023-09-27
 AWS-history: Update changelog 2023-09-28
+AWS-history: Update changelog 2023-09-29
