--- a/changelog.txt
+++ b/changelog.txt
@@ -19,3 +19,4 @@ AWS-history: Update changelog 2023-09-26
 AWS-history: Update changelog 2023-09-27
 AWS-history: Update changelog 2023-09-28
 AWS-history: Update changelog 2023-09-29
+AWS-history: Update changelog 2023-09-30
