--- a/changelog.txt
+++ b/changelog.txt
@@ -20,3 +20,4 @@ AWS-history: Update changelog 2023-09-27
 AWS-history: Update changelog 2023-09-28
 AWS-history: Update changelog 2023-09-29
 AWS-history: Update changelog 2023-09-30
+AWS-history: Update changelog 2023-10-01
