--- a/changelog.txt
+++ b/changelog.txt
@@ -22,3 +22,4 @@ AWS-history: Update changelog 2023-09-29
 AWS-history: Update changelog 2023-09-30
 AWS-history: Update changelog 2023-10-01
 AWS-history: Update changelog 2023-10-02
+AWS-history: Update changelog 2023-10-03
