--- a/changelog.txt
+++ b/changelog.txt
@@ -23,3 +23,4 @@ AWS-history: Update changelog 2023-09-30
 AWS-history: Update changelog 2023-10-01
 AWS-history: Update changelog 2023-10-02
 AWS-history: Update changelog 2023-10-03
+AWS-history: Update changelog 2023-10-04
