--- a/changelog.txt
+++ b/changelog.txt
@@ -24,3 +24,4 @@ AWS-history: Update changelog 2023-10-01
 AWS-history: Update changelog 2023-10-02
 AWS-history: Update changelog 2023-10-03
 AWS-history: Update changelog 2023-10-04
+AWS-history: Update changelog 2023-10-05
