--- a/changelog.txt
+++ b/changelog.txt
@@ -25,3 +25,4 @@ AWS-history: Update changelog 2023-10-02
 AWS-history: Update changelog 2023-10-03
 AWS-history: Update changelog 2023-10-04
 AWS-history: Update changelog 2023-10-05
+AWS-history: Update changelog 2023-10-06
