--- a/changelog.txt
+++ b/changelog.txt
@@ -26,3 +26,4 @@ AWS-history: Update changelog 2023-10-03
 AWS-history: Update changelog 2023-10-04
 AWS-history: Update changelog 2023-10-05
 AWS-history: Update changelog 2023-10-06
+AWS-history: Update changelog 2023-10-07
