--- a/changelog.txt
+++ b/changelog.txt
@@ -27,3 +27,4 @@ AWS-history: Update changelog 2023-10-04
 AWS-history: Update changelog 2023-10-05
 AWS-history: Update changelog 2023-10-06
 AWS-history: Update changelog 2023-10-07
+AWS-history: Update changelog 2023-10-08
