--- a/changelog.txt
+++ b/changelog.txt
@@ -29,3 +29,4 @@ AWS-history: Update changelog 2023-10-06
 AWS-history: Update changelog 2023-10-07
 AWS-history: Update changelog 2023-10-08
 AWS-history: Update changelog 2023-10-09
+AWS-history: Update changelog 2023-10-10
