--- a/changelog.txt
+++ b/changelog.txt
@@ -31,3 +31,4 @@ AWS-history: Update changelog 2023-10-08
 AWS-history: Update changelog 2023-10-09
 AWS-history: Update changelog 2023-10-10
 AWS-history: Update changelog 2023-10-11
+AWS-history: Update changelog 2023-10-12
