--- a/changelog.txt
+++ b/changelog.txt
@@ -32,3 +32,4 @@ AWS-history: Update changelog 2023-10-09
 AWS-history: Update changelog 2023-10-10
 AWS-history: Update changelog 2023-10-11
 AWS-history: Update changelog 2023-10-12
+AWS-history: Update changelog 2023-10-13
