--- a/changelog.txt
+++ b/changelog.txt
@@ -33,3 +33,4 @@ AWS-history: Update changelog 2023-10-10
 AWS-history: Update changelog 2023-10-11
 AWS-history: Update changelog 2023-10-12
 AWS-history: Update changelog 2023-10-13
+AWS-history: Update changelog 2023-10-14
