--- a/changelog.txt
+++ b/changelog.txt
@@ -34,3 +34,4 @@ AWS-history: Update changelog 2023-10-11
 AWS-history: Update changelog 2023-10-12
 AWS-history: Update changelog 2023-10-13
 AWS-history: Update changelog 2023-10-14
+AWS-history: Update changelog 2023-10-15
