--- a/changelog.txt
+++ b/changelog.txt
@@ -35,3 +35,4 @@ AWS-history: Update changelog 2023-10-12
 AWS-history: Update changelog 2023-10-13
 AWS-history: Update changelog 2023-10-14
 AWS-history: Update changelog 2023-10-15
+AWS-history: Update changelog 2023-10-16
