--- a/changelog.txt
+++ b/changelog.txt
@@ -36,3 +36,4 @@ AWS-history: Update changelog 2023-10-13
 AWS-history: Update changelog 2023-10-14
 AWS-history: Update changelog 2023-10-15
 AWS-history: Update changelog 2023-10-16
+AWS-history: Update changelog 2023-10-17
