--- a/changelog.txt
+++ b/changelog.txt
@@ -39,3 +39,4 @@ AWS-history: Update changelog 2023-10-16
 AWS-history: Update changelog 2023-10-17
 AWS-history: Update changelog 2023-10-18
 AWS-history: Update changelog 2023-10-19
+AWS-history: Update changelog 2023-10-20
