--- a/changelog.txt
+++ b/changelog.txt
@@ -40,3 +40,4 @@ AWS-history: Update changelog 2023-10-17
 AWS-history: Update changelog 2023-10-18
 AWS-history: Update changelog 2023-10-19
 AWS-history: Update changelog 2023-10-20
+AWS-history: Update changelog 2023-10-21
