--- a/changelog.txt
+++ b/changelog.txt
@@ -41,3 +41,4 @@ AWS-history: Update changelog 2023-10-18
 AWS-history: Update changelog 2023-10-19
 AWS-history: Update changelog 2023-10-20
 AWS-history: Update changelog 2023-10-21
+AWS-history: Update changelog 2023-10-22
