--- a/changelog.txt
+++ b/changelog.txt
@@ -42,3 +42,4 @@ AWS-history: Update changelog 2023-10-19
 AWS-history: Update changelog 2023-10-20
 AWS-history: Update changelog 2023-10-21
 AWS-history: Update changelog 2023-10-22
+AWS-history: Update changelog 2023-10-23
