--- a/changelog.txt
+++ b/changelog.txt
@@ -44,3 +44,4 @@ AWS-history: Update changelog 2023-10-21
 AWS-history: Update changelog 2023-10-22
 AWS-history: Update changelog 2023-10-23
 AWS-history: Update changelog 2023-10-24
+AWS-history: Update changelog 2023-10-25
