--- a/changelog.txt
+++ b/changelog.txt
@@ -45,3 +45,4 @@ AWS-history: Update changelog 2023-10-22
 AWS-history: Update changelog 2023-10-23
 AWS-history: Update changelog 2023-10-24
 AWS-history: Update changelog 2023-10-25
+AWS-history: Update changelog 2023-10-26
