--- a/changelog.txt
+++ b/changelog.txt
@@ -46,3 +46,4 @@ AWS-history: Update changelog 2023-10-23
 AWS-history: Update changelog 2023-10-24
 AWS-history: Update changelog 2023-10-25
 AWS-history: Update changelog 2023-10-26
+AWS-history: Update changelog 2023-10-27
