--- a/changelog.txt
+++ b/changelog.txt
@@ -47,3 +47,4 @@ AWS-history: Update changelog 2023-10-24
 AWS-history: Update changelog 2023-10-25
 AWS-history: Update changelog 2023-10-26
 AWS-history: Update changelog 2023-10-27
+AWS-history: Update changelog 2023-10-28
