--- a/changelog.txt
+++ b/changelog.txt
@@ -48,3 +48,4 @@ AWS-history: Update changelog 2023-10-25
 AWS-history: Update changelog 2023-10-26
 AWS-history: Update changelog 2023-10-27
 AWS-history: Update changelog 2023-10-28
+AWS-history: Update changelog 2023-10-29
