--- a/changelog.txt
+++ b/changelog.txt
@@ -50,3 +50,4 @@ AWS-history: Update changelog 2023-10-27
 AWS-history: Update changelog 2023-10-28
 AWS-history: Update changelog 2023-10-29
 AWS-history: Update changelog 2023-10-30
+AWS-history: Update changelog 2023-10-31
