--- a/changelog.txt
+++ b/changelog.txt
@@ -51,3 +51,4 @@ AWS-history: Update changelog 2023-10-28
 AWS-history: Update changelog 2023-10-29
 AWS-history: Update changelog 2023-10-30
 AWS-history: Update changelog 2023-10-31
+AWS-history: Update changelog 2023-11-01
