--- a/changelog.txt
+++ b/changelog.txt
@@ -53,3 +53,4 @@ AWS-history: Update changelog 2023-10-30
 AWS-history: Update changelog 2023-10-31
 AWS-history: Update changelog 2023-11-01
 AWS-history: Update changelog 2023-11-02
+AWS-history: Update changelog 2023-11-03
