--- a/changelog.txt
+++ b/changelog.txt
@@ -55,3 +55,4 @@ AWS-history: Update changelog 2023-11-01
 AWS-history: Update changelog 2023-11-02
 AWS-history: Update changelog 2023-11-03
 AWS-history: Update changelog 2023-11-04
+AWS-history: Update changelog 2023-11-05
