--- a/changelog.txt
+++ b/changelog.txt
@@ -56,3 +56,4 @@ AWS-history: Update changelog 2023-11-02
 AWS-history: Update changelog 2023-11-03
 AWS-history: Update changelog 2023-11-04
 AWS-history: Update changelog 2023-11-05
+AWS-history: Update changelog 2023-11-06
