--- a/changelog.txt
+++ b/changelog.txt
@@ -57,3 +57,4 @@ AWS-history: Update changelog 2023-11-03
 AWS-history: Update changelog 2023-11-04
 AWS-history: Update changelog 2023-11-05
 AWS-history: Update changelog 2023-11-06
+AWS-history: Update changelog 2023-11-07
