--- a/changelog.txt
+++ b/changelog.txt
@@ -59,3 +59,4 @@ AWS-history: Update changelog 2023-11-05
 AWS-history: Update changelog 2023-11-06
 AWS-history: Update changelog 2023-11-07
 AWS-history: Update changelog 2023-11-08
+AWS-history: Update changelog 2023-11-09
