--- a/changelog.txt
+++ b/changelog.txt
@@ -60,3 +60,4 @@ AWS-history: Update changelog 2023-11-06
 AWS-history: Update changelog 2023-11-07
 AWS-history: Update changelog 2023-11-08
 AWS-history: Update changelog 2023-11-09
+AWS-history: Update changelog 2023-11-10
