--- a/changelog.txt
+++ b/changelog.txt
@@ -62,3 +62,4 @@ AWS-history: Update changelog 2023-11-08
 AWS-history: Update changelog 2023-11-09
 AWS-history: Update changelog 2023-11-10
 AWS-history: Update changelog 2023-11-11
+AWS-history: Update changelog 2023-11-12
