--- a/changelog.txt
+++ b/changelog.txt
@@ -63,3 +63,4 @@ AWS-history: Update changelog 2023-11-09
 AWS-history: Update changelog 2023-11-10
 AWS-history: Update changelog 2023-11-11
 AWS-history: Update changelog 2023-11-12
+AWS-history: Update changelog 2023-11-13
