--- a/changelog.txt
+++ b/changelog.txt
@@ -64,3 +64,4 @@ AWS-history: Update changelog 2023-11-10
 AWS-history: Update changelog 2023-11-11
 AWS-history: Update changelog 2023-11-12
 AWS-history: Update changelog 2023-11-13
+AWS-history: Update changelog 2023-11-14
