--- a/changelog.txt
+++ b/changelog.txt
@@ -67,3 +67,4 @@ AWS-history: Update changelog 2023-11-13
 AWS-history: Update changelog 2023-11-14
 AWS-history: Update changelog 2023-11-15
 AWS-history: Update changelog 2023-11-16
+AWS-history: Update changelog 2023-11-17
