--- a/changelog.txt
+++ b/changelog.txt
@@ -68,3 +68,4 @@ AWS-history: Update changelog 2023-11-14
 AWS-history: Update changelog 2023-11-15
 AWS-history: Update changelog 2023-11-16
 AWS-history: Update changelog 2023-11-17
+AWS-history: Update changelog 2023-11-18
