--- a/changelog.txt
+++ b/changelog.txt
@@ -69,3 +69,4 @@ AWS-history: Update changelog 2023-11-15
 AWS-history: Update changelog 2023-11-16
 AWS-history: Update changelog 2023-11-17
 AWS-history: Update changelog 2023-11-18
+AWS-history: Update changelog 2023-11-19
