--- a/changelog.txt
+++ b/changelog.txt
@@ -70,3 +70,4 @@ AWS-history: Update changelog 2023-11-16
 AWS-history: Update changelog 2023-11-17
 AWS-history: Update changelog 2023-11-18
 AWS-history: Update changelog 2023-11-19
+AWS-history: Update changelog 2023-11-20
