--- a/changelog.txt
+++ b/changelog.txt
@@ -73,3 +73,4 @@ AWS-history: Update changelog 2023-11-19
 AWS-history: Update changelog 2023-11-20
 AWS-history: Update changelog 2023-11-21
 AWS-history: Update changelog 2023-11-22
+AWS-history: Update changelog 2023-11-23
