--- a/changelog.txt
+++ b/changelog.txt
@@ -75,3 +75,4 @@ AWS-history: Update changelog 2023-11-21
 AWS-history: Update changelog 2023-11-22
 AWS-history: Update changelog 2023-11-23
 AWS-history: Update changelog 2023-11-24
+AWS-history: Update changelog 2023-11-25
