--- a/changelog.txt
+++ b/changelog.txt
@@ -76,3 +76,4 @@ AWS-history: Update changelog 2023-11-22
 AWS-history: Update changelog 2023-11-23
 AWS-history: Update changelog 2023-11-24
 AWS-history: Update changelog 2023-11-25
+AWS-history: Update changelog 2023-11-26
