--- a/changelog.txt
+++ b/changelog.txt
@@ -78,3 +78,4 @@ AWS-history: Update changelog 2023-11-24
 AWS-history: Update changelog 2023-11-25
 AWS-history: Update changelog 2023-11-26
 AWS-history: Update changelog 2023-11-27
+AWS-history: Update changelog 2023-11-28
