--- a/changelog.txt
+++ b/changelog.txt
@@ -79,3 +79,4 @@ AWS-history: Update changelog 2023-11-25
 AWS-history: Update changelog 2023-11-26
 AWS-history: Update changelog 2023-11-27
 AWS-history: Update changelog 2023-11-28
+AWS-history: Update changelog 2023-11-29
