--- a/changelog.txt
+++ b/changelog.txt
@@ -81,3 +81,4 @@ AWS-history: Update changelog 2023-11-27
 AWS-history: Update changelog 2023-11-28
 AWS-history: Update changelog 2023-11-29
 AWS-history: Update changelog 2023-11-30
+AWS-history: Update changelog 2023-12-01
