--- a/changelog.txt
+++ b/changelog.txt
@@ -82,3 +82,4 @@ AWS-history: Update changelog 2023-11-28
 AWS-history: Update changelog 2023-11-29
 AWS-history: Update changelog 2023-11-30
 AWS-history: Update changelog 2023-12-01
+AWS-history: Update changelog 2023-12-02
