--- a/changelog.txt
+++ b/changelog.txt
@@ -83,3 +83,4 @@ AWS-history: Update changelog 2023-11-29
 AWS-history: Update changelog 2023-11-30
 AWS-history: Update changelog 2023-12-01
 AWS-history: Update changelog 2023-12-02
+AWS-history: Update changelog 2023-12-03
