--- a/changelog.txt
+++ b/changelog.txt
@@ -84,3 +84,4 @@ AWS-history: Update changelog 2023-11-30
 AWS-history: Update changelog 2023-12-01
 AWS-history: Update changelog 2023-12-02
 AWS-history: Update changelog 2023-12-03
+AWS-history: Update changelog 2023-12-04
