--- a/changelog.txt
+++ b/changelog.txt
@@ -85,3 +85,4 @@ AWS-history: Update changelog 2023-12-01
 AWS-history: Update changelog 2023-12-02
 AWS-history: Update changelog 2023-12-03
 AWS-history: Update changelog 2023-12-04
+AWS-history: Update changelog 2023-12-05
