--- a/changelog.txt
+++ b/changelog.txt
@@ -87,3 +87,4 @@ AWS-history: Update changelog 2023-12-03
 AWS-history: Update changelog 2023-12-04
 AWS-history: Update changelog 2023-12-05
 AWS-history: Update changelog 2023-12-06
+AWS-history: Update changelog 2023-12-07
