--- a/changelog.txt
+++ b/changelog.txt
@@ -89,3 +89,4 @@ AWS-history: Update changelog 2023-12-05
 AWS-history: Update changelog 2023-12-06
 AWS-history: Update changelog 2023-12-07
 AWS-history: Update changelog 2023-12-08
+AWS-history: Update changelog 2023-12-09
