--- a/changelog.txt
+++ b/changelog.txt
@@ -91,3 +91,4 @@ AWS-history: Update changelog 2023-12-07
 AWS-history: Update changelog 2023-12-08
 AWS-history: Update changelog 2023-12-09
 AWS-history: Update changelog 2023-12-10
+AWS-history: Update changelog 2023-12-11
