--- a/changelog.txt
+++ b/changelog.txt
@@ -93,3 +93,4 @@ AWS-history: Update changelog 2023-12-09
 AWS-history: Update changelog 2023-12-10
 AWS-history: Update changelog 2023-12-11
 AWS-history: Update changelog 2023-12-12
+AWS-history: Update changelog 2023-12-13
