--- a/changelog.txt
+++ b/changelog.txt
@@ -94,3 +94,4 @@ AWS-history: Update changelog 2023-12-10
 AWS-history: Update changelog 2023-12-11
 AWS-history: Update changelog 2023-12-12
 AWS-history: Update changelog 2023-12-13
+AWS-history: Update changelog 2023-12-14
