--- a/changelog.txt
+++ b/changelog.txt
@@ -95,3 +95,4 @@ AWS-history: Update changelog 2023-12-11
 AWS-history: Update changelog 2023-12-12
 AWS-history: Update changelog 2023-12-13
 AWS-history: Update changelog 2023-12-14
+AWS-history: Update changelog 2023-12-15
