--- a/changelog.txt
+++ b/changelog.txt
@@ -97,3 +97,4 @@ AWS-history: Update changelog 2023-12-13
 AWS-history: Update changelog 2023-12-14
 AWS-history: Update changelog 2023-12-15
 AWS-history: Update changelog 2023-12-16
+AWS-history: Update changelog 2023-12-17
