--- a/changelog.txt
+++ b/changelog.txt
@@ -98,3 +98,4 @@ AWS-history: Update changelog 2023-12-14
 AWS-history: Update changelog 2023-12-15
 AWS-history: Update changelog 2023-12-16
 AWS-history: Update changelog 2023-12-17
+AWS-history: Update changelog 2023-12-18
