--- a/changelog.txt
+++ b/changelog.txt
@@ -100,3 +100,4 @@ AWS-history: Update changelog 2023-12-16
 AWS-history: Update changelog 2023-12-17
 AWS-history: Update changelog 2023-12-18
 AWS-history: Update changelog 2023-12-19
+AWS-history: Update changelog 2023-12-20
