--- a/changelog.txt
+++ b/changelog.txt
@@ -101,3 +101,4 @@ AWS-history: Update changelog 2023-12-17
 AWS-history: Update changelog 2023-12-18
 AWS-history: Update changelog 2023-12-19
 AWS-history: Update changelog 2023-12-20
+AWS-history: Update changelog 2023-12-21
