--- a/changelog.txt
+++ b/changelog.txt
@@ -102,3 +102,4 @@ AWS-history: Update changelog 2023-12-18
 AWS-history: Update changelog 2023-12-19
 AWS-history: Update changelog 2023-12-20
 AWS-history: Update changelog 2023-12-21
+AWS-history: Update changelog 2023-12-22
