--- a/changelog.txt
+++ b/changelog.txt
@@ -103,3 +103,4 @@ AWS-history: Update changelog 2023-12-19
 AWS-history: Update changelog 2023-12-20
 AWS-history: Update changelog 2023-12-21
 AWS-history: Update changelog 2023-12-22
+AWS-history: Update changelog 2023-12-23
