--- a/changelog.txt
+++ b/changelog.txt
@@ -104,3 +104,4 @@ AWS-history: Update changelog 2023-12-20
 AWS-history: Update changelog 2023-12-21
 AWS-history: Update changelog 2023-12-22
 AWS-history: Update changelog 2023-12-23
+AWS-history: Update changelog 2023-12-24
