--- a/changelog.txt
+++ b/changelog.txt
@@ -105,3 +105,4 @@ AWS-history: Update changelog 2023-12-21
 AWS-history: Update changelog 2023-12-22
 AWS-history: Update changelog 2023-12-23
 AWS-history: Update changelog 2023-12-24
+AWS-history: Update changelog 2023-12-25
