--- a/changelog.txt
+++ b/changelog.txt
@@ -108,3 +108,4 @@ AWS-history: Update changelog 2023-12-24
 AWS-history: Update changelog 2023-12-25
 AWS-history: Update changelog 2023-12-26
 AWS-history: Update changelog 2023-12-27
+AWS-history: Update changelog 2023-12-28
