--- a/changelog.txt
+++ b/changelog.txt
@@ -110,3 +110,4 @@ AWS-history: Update changelog 2023-12-26
 AWS-history: Update changelog 2023-12-27
 AWS-history: Update changelog 2023-12-28
 AWS-history: Update changelog 2023-12-29
+AWS-history: Update changelog 2023-12-30
