--- a/changelog.txt
+++ b/changelog.txt
@@ -113,3 +113,4 @@ AWS-history: Update changelog 2023-12-29
 AWS-history: Update changelog 2023-12-30
 AWS-history: Update changelog 2023-12-31
 AWS-history: Update changelog 2024-01-01
+AWS-history: Update changelog 2024-01-02
